MDEV-35147 Inconsistent NULL handling in vector type